...
#endif
    }
    
    private var content: some View {
        VStack {
#if os(OSX)
            Text(event == nil ? "Add event" : "Edit event")
                .font(.headline)
                .padding(.top)
#endif
            Form {
                Section {
                    TextField("Event name", text: $title)
...
