...
#if os(OSX)
  var continueButton: some View {
    Button {
      dismiss()
    } label: {
      Spacer()
      Text("Continue", comment: "A button that dismisses the onboarding view. Shown only on macOS")
        .bold()
        .frame(height: 38)
      Spacer()
    }
    .buttonStyle(.borderedProminent)
    .padding()
...
